increase memory allocated when running unit tests