@@ -192,6 +192,14 @@
                     <artifactId>maven-dependency-plugin</artifactId>
                     <version>2.4</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.17</version>
+                    <configuration>
+                        <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
 
